Configuration: ControllerAssemblies section; removed IsActive; removed Consumer from the passive processors

--- a/Bridge.Service/appsettings.json
+++ b/Bridge.Service/appsettings.json
@@ -6,10 +6,12 @@
   },
   "AllowedHosts": "*",
 
+  "ControllerAssemblies": [
+    "Bridge.Consumers.dll"
+  ],
   "Processors": [
     {
       "Id": "SimpleProcessor",
-      "IsActive": true,
       "DataConsumer": {
         "Assembly": "Bridge.Consumers.dll",
         "Type": "Bridge.Consumers.SimpleConsumer",
@@ -28,11 +30,6 @@
     },
     {
       "Id": "RestProcessor",
-      "IsActive": false,
-      "DataConsumer": {
-        "Assembly": "Bridge.Consumers.dll",
-        "Type": "Bridge.Consumers.RestConsumer"
-      },
       "DataTransformer": {
         "Assembly": "Bridge.Transformers.dll",
         "Type": "Bridge.Transformers.SimpleTransformer"
